alertmanager/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      name: alertmanager
      labels:
        app: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
          - '--config.file=/config/config.yaml'
          - '--storage.path=/alertmanager'
          - '--web.external-url=https://alertmanager.k.oneill.net'
        ports:
        - name: alertmanager
          containerPort: 9093
        volumeMounts:
        - name: templates
          mountPath: /etc/alertmanager-templates
        - name: alertmanager-config
          mountPath: /config
        - name: alertmanager-data
          mountPath: /alertmanager
      volumes:
      - name: config-template
        configMap:
          name: alertmanager
      - name: templates
        configMap:
          name: alertmanager-templates
      - name: alertmanager-config
        emptyDir: {}
      - name: alertmanager-data
        persistentVolumeClaim:
          claimName: alertmanager-data
