alertmanager/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: kube-system
  labels:
    k8s-app: alertmanager
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - "alertmanager.k.oneill.net"
      secretName: "alertmanager-tls"
  rules:
    - host: "alertmanager.k.oneill.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: alertmanager
              servicePort: 9093
